# DUANJU

./: .coveragerc  .gitignore  CMakeLists.txt  README.md  install.sh  main.py  pyappify.yml  requirements.txt  server.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: Nuitka.yml  PyAppify.yml  PyInstaller.yml  Releases.yml  build.yml  packaging.yml  release.yml
Debug/: README.md  main.py  requirements.txt
Debug/src/: __init__.py
Debug/src/core/: __init__.py  models.py  theme_manager.py
Debug/src/data/: __init__.py
Debug/src/services/: __init__.py  category_service.py  download_service.py  search_service.py  video_service.py
Release/: README.md  main.py  requirements.txt
Release/src/: __init__.py
Release/src/core/: models.py  theme_manager.py
Release/src/services/: category_service.py  download_service.py  search_service.py  video_service.py
Release/src/ui/: __init__.py
docs/: PyAppify 开发文档.md  PySide6 QFluentWidgets（开源版）.md  ai-development-spec.md  api-adapter-guide.md
docs/Changelog/: v1.1.0.md  v1.1.1.md
docs/api.cenguigui.cn/: 短剧API调用文档.md
docs/api.duanju-search/: 全网短剧API调用文档.md
docs/api.uuuka.com/: 即刻短剧API调用文档.md
include/: mainwindow.h
include/api/: apiclient.h
include/models/: datamodels.h
include/services/: categoryservice.h  searchservice.h  videoservice.h
include/utils/: configmanager.h  logmanager.h  thememanager.h
include/widgets/: categorybrowser.h  episodelistdialog.h  errorhandler.h  logviewer.h  searchwidget.h  settingsdialog.h  videoplayer.h
resources/: resources.qrc
src/: main.cpp  mainwindow.cpp
src/api/: apiclient.cpp
src/core/: models.py  theme_manager.py
src/core/utils/: __init__.py  async_worker.py  error_handler.py  json_serializer.py  log_manager.py  retry_handler.py  string_utils.py
src/data/: api_client.py  cache_manager.py  config_manager.py  favorites_manager.py  history_manager.py  image_loader.py  response_parser.py
src/data/api/: api_client.py  response_parser.py
src/data/cache/: cache_manager.py
src/data/config/: config_manager.py
src/data/history/: __init__.py
src/data/image/: __init__.py  image_loader.py
src/data/providers/: __init__.py  provider_base.py  provider_init.py  provider_registry.py
src/models/: datamodels.cpp
src/services/: category_service.py  categoryservice.cpp  download_service.py  download_service_v2.py  search_service.py  searchservice.cpp  unified_service.py  video_service.py  videoservice.cpp
src/ui/: __init__.py
src/ui/controls/: drama_card.py  loading_spinner.py  pagination.py  video_player.py
src/ui/dialogs/: __init__.py  episode_dialog.py  settings_dialog.py  (+1 more)
src/utils/: configmanager.cpp  error_handler.py  json_serializer.py  log_manager.py  logmanager.cpp  network_monitor.py  resource_utils.py  thememanager.cpp  time_utils.py
src/widgets/: categorybrowser.cpp  episodelistdialog.cpp  errorhandler.cpp  logviewer.cpp  searchwidget.cpp  settingsdialog.cpp  videoplayer.cpp
static/: index.html
static/css/: style.css
static/js/: api.js  app.js  components.js
test/: README.md  __init__.py  ai_test_assistant.py  auto_test_generator.py  auto_test_runner.py  conftest.py  pytest.ini  requirements-test.txt  run_tests.py  test_adapter_template.py  test_adapters.py  test_api_client.py  test_async_worker.py  test_cache_manager.py  test_category_service.py  test_config_manager.py  test_coverage_boost.py  test_coverage_boost_v2.py  test_download_service_v2.py  test_duanju_search_adapter.py  test_end_to_end.py  test_error_handler.py  test_favorites_history.py  test_image_loader.py  test_integration.py  test_json_serializer.py  test_log_manager.py  test_models.py  test_models_equality.py  test_network_monitor.py  test_provider_init.py  test_providers.py  test_qt_dependent_modules.py  test_response_parser.py  test_retry_handler.py  test_search_service_full.py  test_services.py  test_theme_manager.py  test_time_utils.py  test_ui_controls.py  (+8 more)
tests/: property_tests.cpp  test_apiclient.cpp  test_configmanager.cpp  test_datamodels.cpp  test_logmanager.cpp  test_searchvalidation.cpp
(+71 files in other folders)
